--- a/permuter_settings.toml
+++ b/permuter_settings.toml
@@ -14,6 +14,9 @@ compiler_type = "ido"
 "SFX_.*" = "int"
 "ATTACK_.*" = "int"
 "FTOFIX32" = "int"
+"GPACK_RGBA5551" =" int"
+"OS_K0_TO_PHYSICAL" = "int"
+"SSSV_RAND" = "int"
 
 [decompme.compilers]
 "tools/ido5.3_recomp/cc" = "ido5.3"
