--- a/sssv.us.yaml
+++ b/sssv.us.yaml
@@ -4,8 +4,9 @@ options:
   target_path: baserom.us.z64
   base_path: .
   compiler: IDO
-  symbol_addrs_path:   symbol_addrs.us.txt
+  symbol_addrs_path: symbol_addrs.us.txt
   undefined_syms_path: undefined_syms.us.txt
+  ld_symbol_header_path: include/ld_symbols.us.h
   generated_c_preamble: |
     #include <ultra64.h>
     #include "common.h"
@@ -857,7 +858,7 @@ segments:
     exclusive_ram_id: ovl_05
     subsegments:
     - [0x7F790, sssv_vtx, data/inc/D_05000000_7F790]
-    - [0x7F910, .data, data/D_5000180_7F910]
+    - [0x7F910, .data, data/D_05000180_7F910]
     - [0x7F9D0, sssv_vtx, data/inc/D_05000240_7F9D0]
     - [0x7FBC0, sssv_vtx, data/inc/D_05000430_7FBC0]
     - [0x7FC70, .data, data/D_050004E0_7FC70]
@@ -3749,6 +3750,8 @@ segments:
     - [0x7B62E0, data, sssv/animals/dog]
     - [0x7B65A0, data, sssv/animals/hippo]
     - [0x7B6780, data, sssv/animals/lion]
+    - [0x7B6970, .data, overlay2_7070A0]
+    - [0x7B6980, data, overlay2_7070A0]
     - [0x7B6A90, data, sssv/animals/rabbit]
     - [0x7B6BD0, data, sssv/animals/frog]
     - [0x7B6C10, data, overlay2_716900] # overlay2_716900
@@ -3790,10 +3793,7 @@ segments:
     - [0x7C7960, bin]
     - [0x7C79C0, bin] # D_803B6310_7C79C0
     - [0x7C79D0, .data, sssv/terminal_background]
-    - [0x7C7B00, bin]
-    # - [0x7C7CB8, bin] # displaylist
-    # - [0x7C7D68, bin] # displaylist
-    - [0x7C7D90, bin] # continued sssv/terminal_background data
+    - [0x7C7DA0, data] # tbd
     - [0x7C7F40, .data, overlay2_7A8A50] # data for overlay2_7A8A50?
     - [0x7C86B0, bin] # pointers
     # - [0x7C87B8, bin] # pointers to displaylists # 7C87B8
@@ -3886,6 +3886,7 @@ segments:
     - [0x7D1AD0, .bss, overlay2_6A6500]
     - [0x7D1AD0, .bss, overlay2_6B5380]
     - [0x7D1AD0, .bss, overlay2_741000]
+    - [0x7D1AD0, .bss, sssv/animals/chameleon]
   # - [0x7D1DF0, bin] # D_803C0740_7D1DF0
   - [0x7D1AD0, bin] # referenced in overlay2_7A8A50
   # - [0x7D1AF0, bin] # end of data?
