--- a/sssv.us.yaml
+++ b/sssv.us.yaml
@@ -5,7 +5,6 @@ options:
   base_path: .
   compiler: IDO
   symbol_addrs_path: symbol_addrs.us.txt
-  undefined_syms_path: undefined_syms.us.txt
   ld_symbol_header_path: include/ld_symbols.us.h
   generated_c_preamble: |
     #include <ultra64.h>
@@ -384,7 +383,7 @@ segments:
     - [0x3DA20, i4, img/3DA20.i4, 16, 16]
     - [0x3DAA0, i4, img/3DAA0.i4, 16, 16]
     - [0x3DB20, bin] # palette?
-    - [0x3DB40, .data, data/D_01004270_3DB40]
+    - [0x3DB40, .data, data/D_01004270_3DB40] # evo?
     - [0x3DC30, .data, data/D_01004360_3DC30]
     - [0x3DC70, .data, data/D_010043A0_3DC70]
     - [0x3DDE0, .data, data/D_01004510_3DDE0]
@@ -3538,7 +3537,7 @@ segments:
     - [0x658F40, bin] # texture(s)? stars?
     - [0x659B40, bin, rnc_659B40] # 24460 => 163840 # D_802B64A0
     - [0x65FAD0, rnc, img/space_background, rgba16, 160, 128]
-    - [0x662810, rgba16, img/intro/200_credz.rgba16, 32, 128] # "200 credz" texture, 32x128, chunked
+    - [0x662810, rgba16, img/intro/200_credz.rgba16, 32, 128] # chunked
     - [0x664810, bin] # tbd
     - [0x664860, bin, rnc_664860] # 23248 => 163840 # newflash
     - [0x66A330, rnc, img/intro/heroes_for_hire, rgba16, 32, 2560]
@@ -3766,10 +3765,16 @@ segments:
     - [0x7B9780, sssv_vtx, data/inc/D_803A80D0]
     - [0x7B9940] # end of vtx
     - [0x7B99F0, bin] # overlay2_725D10 data?
+    - [0x7B9A00, .data, overlay2_75BC80]
+    - [0x7B9A20, data]
+    - [0x7B9A30, data, sssv/animals/tortoise]
+    - [0x7B9BD0, bin]
     # - [0x7B9BD8, .data, data/objects_7B9BD8] # 0x9C objects x 247  # rodata overlay2_72C680
     # - [0x7C325C, bin] # end of objects
     - [0x7C35D0, .data, data/demo_input] # demo controller input
     - [0x7C4F10, bin] # end of demo controller input
+    - [0x7C5900, data, sssv/animals/polar_bear]
+    - [0x7C5BD0, bin] # tbd
     # - [0x7C5F38, bin] # husky texture 1? 16x16 ci
     # - [0x7C5FB8, bin] # husky texture 2?
     # - [0x7C6038, bin] # tbd
@@ -3786,9 +3791,7 @@ segments:
     - [0x7C7F40, .data, overlay2_7A8A50] # data for overlay2_7A8A50?
     - [0x7C86B0, data] # pointers
     # - [0x7C87B8, bin] # pointers to displaylists # 7C87B8
-    - [0x7C8880, bin] # D_803B71D0
-    # - [0x7C8918, bin] # D_803B7268_7C8918
-    # - [0x7C8A18, bin] # D_803B7368_7C8A18
+    - [0x7C8880, data, ui_main_menu] # D_803B71D0
     - [0x7C8B30, .data, ui_main_menu]
     - [0x7C8B80, rgba16, img/butterfly_thing.rgba16, 32, 32]
     - [0x7C9380, rgba16, img/butterfly1a.rgba16, 32, 32]
@@ -3835,17 +3838,17 @@ segments:
     - [0x7CF800, .rodata, overlay2_73E580]
     - [0x7CF810, .rodata, overlay2_73ED30]
     - [0x7CF860, .rodata, overlay2_741000]
-    - [0x7CFFD0, rodata, overlay2_7558F0]
+    - [0x7CFFD0, .rodata, overlay2_7558F0]
     - [0x7CFFF0, .rodata, sssv/osd]
     - [0x7D0050, .rodata, sssv/hilites]
     - [0x7D0080, .rodata, overlay2_75BC80]
-    - [0x7D00A0, rodata, sssv/init]
+    - [0x7D00A0, .rodata, sssv/init]
     - [0x7D0140, .rodata, sssv/animals/tortoise]
     - [0x7D01E0, .rodata, sssv/animals/hyena]
     - [0x7D0210, .rodata, sssv/animals/chameleon]
     - [0x7D0220, .rodata, overlay2_76D850]
     - [0x7D02B0, .rodata, sssv/animals/rat]
-    - [0x7D02C0, rodata, overlay2_76F7D0]
+    - [0x7D02C0, .rodata, sssv/animals/rat]
     - [0x7D02D0, .rodata, sssv/animals/sheep]
     - [0x7D0310, .rodata, overlay2_7741B0]
     - [0x7D05B0, .rodata, sssv/animals/penguin]
